<resources>
    <string name="app_name">Siclo Challenge</string>

    <!-- Login -->
    <string name="welcome_message">Welcome to Siclo</string>
    <string name="sign_in_message">login to start a new and unique experience</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="create_account">Create account</string>
    <string name="empty_email">Please inset your email</string>
    <string name="empty_password">Please insert your password</string>
    <string name="invalid_email">Please insert a valid email</string>
    <string name="login_failed">Either your email or password is incorrect</string>

    <!-- Calendar -->
    <string name="calendar_title">Calendar</string>
    <string name="class_name">Class:</string>
    <string name="instructor_name">Instructor:</string>
    <string name="class_time">Time:</string>
    <string name="check_class_button">Check it out</string>
    <string name="api_response_failure">Something went wrong, please try again later</string>
    <string name="wait_message">Pleas wait…</string>
    <string name="no_classes">No classes for this day</string>
</resources>
